<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_cinema"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/cinemaListTitle" />
    <item
        android:id="@+id/nav_favourite"
        android:icon="@drawable/ic_baseline_stars_24"
        android:title="@string/favouriteTitle" />
    <item
        android:id="@+id/nav_Schedule"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/scheduleTitle" />
</menu>