<resources translatable="false">
    <string name="app_name">Поиск фильмов</string>
    <string name="imgDetailDescription">Изображение фильма</string>
    <string name="commentText">Введите комментарий</string>
    <string name="buttonInvite">Пригласить</string>
    <string name="favoriteTitle">Избранное</string>
    <string name="buttonDetail">Детали</string>
    <string name="buttonWatch">Посмотреть позже</string>
    <string name="buttonEdit">Изменить</string>
    <string name="ScheduleTitle">Смотреть позже</string>
    <string name="channelName">Channel name</string>
    <string name="channelDescription">Channel description</string>
    <string name="notificationTitle">Напоминание о просмотре</string>
    <string name="notificationText">Приготовили попкорн? Пора смотреть фильм </string>
    <string name="messageTextFCM">text</string>
    <string name="channelNameFCM">Latest movie</string>
    <string name="channelDescriptionFCM">Get the most newly created movie.</string>
    <string name="dateTimeFormat">d.M.u H:m</string>
    <string name="scheduleSaveSnackbar">Напоминание сохранено</string>
    <string name="negativeButton">Нет</string>
    <string name="positiveButton">Да</string>
    <string name="inviteMessage">Привет! Приглашаю тебя посмотреть фильм </string>
    <string name="chooserTitle">Отправить приглашение через: </string>
    <string name="updateText">Обновить</string>
    <string name="favouriteAddSnackbar">Фильм добавлен в список избранного</string>
    <string name="cancelText">Отмена</string>
    <string name="scheduleDeleteSnackbar">Напоминание удалено</string>
    <string name="cinemaListTitle">Фильмы</string>
    <string name="favouriteTitle">Избранное</string>
    <string name="scheduleTitle">Смотреть позже</string>
    <string name="favouriteDeleteSnackbar">Фильм удален из Избранного</string>

</resources>