...
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/titleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:breakStrategy="simple"
        android:fontFamily="sans-serif"
...
